# bn-falcon

./: README.md  bnfalcon.py  pyproject.toml
bn_falkon/: cli.py
bn_falkon/templates/: report_template.html  styles.css
bn_falkon/utils/: customization.py  file_handler.py
